(fix) Increase line-height of footer navigation elements
This is needed, so the footer navigation has enough whitespace on
mobile. Before this, the focus styles would overlap with items on the
lines above or below the focussed one.

--- a/app/assets/stylesheets/components/footer.scss
+++ b/app/assets/stylesheets/components/footer.scss
@@ -40,4 +40,8 @@ footer {
     padding: 1em 0;
     text-align: center;
   }
+
+  li {
+    line-height: 1.5em;
+  }
 }
